name:                se-nocker
version:             0.1.0.0
author:              Roy Blankman
maintainer:          riblankman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable rn
  main-is:             Main.hs
  build-depends:       base
                     , se-nocker
                     , data-default
                     , ghcjs-base
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , text
  hs-source-dirs:      app
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Nock
  build-depends:       base
                     , containers
                     , parsec
  default-language:    Haskell2010
